@@ -29,13 +29,15 @@ if (t3lib_extMgm::isLoaded('ics_tcafe_admin')) {
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['renderEntries'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['handleFormField'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['process_valueToDB'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['controlEntry'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['deleteRecord'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['getRecords'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['formRenderer_additionnalMarkers'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['handleFormField_typeSelect'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['getSelectItemArray'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['actions_additionnalDataArray'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['single_additionnalMarkers'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['extra_controlEntries'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['formRenderer_additionnalMarkers'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['controlEntry'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['deleteRecord'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
+	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['ics_tcafe_admin']['getRecords'][] = 'EXT:ics_od_datastore/hook/class.tx_icsoddatastore_TCAFEAdmin.php:tx_icsoddatastore_TCAFEAdmin';
 }
 //--- API commands ---
 
