@@ -335,3 +335,16 @@
 		</div>
 	</div>
 <!-- ###TEMPLATE_FORM_FILES_FIELD_FILE### end-->
+
+
+
+
+<!-- This template complete TEMPLATE_FORM_SELECT_SINGLE for tiers fields ('agency', 'contact', 'publisher', 'creator', 'manager', 'owner') of table 'tx_icsoddatastore_filegroups'-->
+
+<!--  ###TEMPLATE_FORM_TIERS_INFO### start-->
+	<div class="###PREFIXID###_tiers_info">
+		<label>###FIELDLABEL### :</label>
+		<span>###FIELDVALUE###</span>
+		###HIDDEN_VALUE###
+	</div>
+<!--  ###TEMPLATE_FORM_TIERS_INFO### end-->
