@@ -1,4 +1,5 @@
 2012-08-10 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added tiers restriction.
 	* Fix: Files error validated infos.
 
 2012-08-09 Tsi YANG <tsi@in-cite.net>
